Fix center alignment on bookmark group

--- a/src/plugins/bookmark/styles.scss
+++ b/src/plugins/bookmark/styles.scss
@@ -9,6 +9,7 @@
     padding: 1rem;
     position: relative;
     cursor: pointer;
+    text-align: start;
 
     .bookmark-content {
         display: flex;
